Write instructions and improve heroku integration

--- a/app.json
+++ b/app.json
@@ -5,6 +5,9 @@
   "env": {
     "PRIVATE_KEY": {
       "description": "Private key used in the oracle"
+    },
+    "CONTRACT_SCRIPTHASH": {
+      "description": "Scripthash of the deployed contract"
     }
   }
 }
