Adapt contract to work with any ticker

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     },
     "CONTRACT_SCRIPTHASH": {
       "description": "Scripthash of the deployed contract"
+    },
+    "BNC_TICKER": {
+      "description": "Ticker of the BEP2 token on Binance Chain"
     }
   }
 }
